interface/interface.css
:root {
  --default-font-size: 16px;
  --bg-color: black;
  --navigation-bg-color: midnightblue;
  --interface-gray: transparent;
  --input-gray: gray;
  --interface-highlight: #282828;
  --interface-border-width: 1px;
  --interface-border: var(--interface-border-width) solid darkgray;
  --interface-border-radius: 5px;
  --interface-default-margin: 1vw;
  --avatar-outline-color: whitesmoke;
  --overlay-color: black;
  --overlay-opacity: 0.6;
  --text-overlay-opacity: 0.7;
  --min-navbar-width: 18vw;
  --cell-horizontal-num: 39;
  --cell-vertical-num: 21;
  --input-height: 2.5;
  --input-border-radius: 25px;
  --cell-size: 2vw;
  --avatar-x: 1;
  --avatar-y: 1;
  --chat-width: 25vw;
}

@font-face {
  font-family: nunito;
  src: url(../font/nunito/Nunito-Regular.ttf);
}

@font-face {
  font-family: nunito-bold;
  src: url(../font/nunito/Nunito-Bold.ttf);
  font-weight: bold;
}

body {
  width: 100%;
  height: 100%;
  font-size: var(--default-font-size);
  background: var(--bg-color);
  margin: 0;
  padding: 0;
}

.container {
  width: calc(
    var(--min-navbar-width) + (var(--cell-size) * var(--cell-horizontal-num)) +
      (var(--interface-border-width) * 6)
  );
  margin-left: auto;
  margin-right: auto;
  margin-top: calc(
    (
        100vh -
          (var(--cell-size) * (var(--cell-vertical-num) + var(--input-height)))
      ) / 2
  );
}

.left {
  display: block;
  float: left;
}

.navbar {
  width: var(--min-navbar-width);
  height: calc(var(--cell-size) * (var(--cell-vertical-num)));
  background-color: var(--interface-gray);
  border: var(--interface-border);
  overflow: scroll;
}

.title {
  width: inherit;
  height: auto;
}

.title {
  border-bottom: var(--interface-border);
}
.profile {
  display: inline-block;
  width: var(--min-navbar-width);
  height: inherit;
  border-right: var(--interface-border);
  overflow: hidden;
}

.title p,
.profile p,
.venues p,
.roomlink p,
.nameInput p {
  font-family: nunito, monospace;
  color: whitesmoke;
  margin: 0;
}

.title p,
.nameInput p {
  font-family: nunito-bold;
}

.title p {
  padding: var(--interface-default-margin);
}

.room {
  background-color: var(--interface-highlight);
}

.venues p {
  opacity: var(--text-overlay-opacity);
  padding-left: var(--interface-default-margin);
  padding-right: var(--interface-default-margin);
  padding-top: var(--interface-default-margin);
  padding-bottom: 3%;
}

.roomlink p {
  padding-top: 5px;
  padding-left: var(--interface-default-margin);
  padding-right: var(--interface-default-margin);
  padding-bottom: 3px;
}

.miniAvatarDisplay {
  padding-left: calc(var(--interface-default-margin) * 1.2);
  padding-right: var(--interface-default-margin);
  padding-bottom: 5px;
}

.navigation {
  display: inline-grid;
  grid-template-rows: repeat(var(--cell-vertical-num), var(--cell-size));
  grid-template-columns: repeat(var(--cell-horizontal-num), var(--cell-size));
  background: var(--navigation-bg-color);
  border-top: var(--interface-border);
  border-right: var(--interface-border);
  border-bottom: var(--interface-border);
}

.input {
  width: calc(
    var(--cell-horizontal-num) * var(--cell-size) + var(--min-navbar-width) +
      var(--interface-border-width)
  );
  height: calc(
    var(--cell-size) * var(--input-height) - var(--interface-border-width)
  );
  background-color: var(--interface-gray);
  border-bottom: var(--interface-border);
  border-left: var(--interface-border);

  border-right: var(--interface-border);
}

.nameInput {
  margin-top: calc((var(--cell-size) * var(--input-height) - 22px) / 2);
  margin-left: 4%;
}

.textInput {
  width: calc(
    var(--cell-size) * var(--cell-horizontal-num) - var(--chat-width)
  );
  margin-top: calc(
    (
      (
          (var(--cell-size) * var(--input-height)) -
            (var(--cell-size) * var(--input-height) / 2)
        ) / 2 - 4px
    )
  );
  margin-left: 1vw;
  height: calc(var(--cell-size) * var(--input-height) / 2);
}

.textInput p {
  font: 16px nunito, monospace;
  text-align: left;
  color: white;
  opacity: var(--text-overlay-opacity);
  margin: 0;
  height: 100%;
  padding-top: 4px;
  padding-left: 2%;
  border: var(--interface-border);
  border-radius: var(--input-border-radius);
}

input[type="color"] {
  -webkit-appearance: none;
  border: none;
  outline: var(--interface-border);
  margin-left: var(--interface-default-margin);
  margin-top: calc(
    (var(--cell-size) * var(--input-height) - var(--cell-size)) / 2
  );
  padding: 0;
  background-color: purple;
}

input[type="color"]::-webkit-color-swatch {
  border: 0px;
}

.colorPicker {
  display: inline-block;
  width: var(--cell-size);
  height: var(--cell-size);
  margin: 0;
  padding: 0;
  border: 1px solid white;
  outline: none;
  cursor: pointer;
}

.overlay {
  width: 100%;
  height: 100%;
  background-color: var(--overlay-color);
  opacity: var(--overlay-opacity);
}

.shadow,
.avatar {
  width: var(--cell-size);
  height: var(--cell-size);
  grid-column-start: var(--avatar-x);
  grid-row-start: var(--avatar-y);
  margin: 0;
  padding: 0;
}

.shadow {
  position: relative;
  z-index: 0;
  outline: 1px solid var(--avatar-outline-color);
}

.avatar {
  position: absolute;
  z-index: 1;
}

a {
  color: inherit;
  text-decoration: none;
}

/* demo purposes, not useful */

.textRecord {
  width: var(--cell-size);
  height: var(--cell-size);
  margin: 0;
  padding: 0;
}

.chat {
  position: absolute;
  width: calc(var(--chat-width));
  height: calc(
    (
        (var(--cell-vertical-num) * var(--cell-size)) -
          (var(--input-height) * var(--cell-size) / 2)
      ) - (var(--interface-default-margin) * 2)
  );
  overflow: scroll;
  padding-top: var(--interface-default-margin);
  padding-bottom: var(--interface-default-margin);
  margin-left: calc(
    (var(--cell-horizontal-num) * var(--cell-size)) - var(--chat-width) -
      (var(--cell-size) * 0.5)
  );
  margin-top: calc(var(--cell-size) / 2);
  border-radius: var(--interface-border-radius);
  text-align: left;
  background-color: black;
  border: var(--interface-border);
  opacity: 0.8;
  z-index: 15;
}

.agenda {
  background-color: var(--bg-color);
  width: var(--chat-width);
  padding-top: calc(var(--interface-default-margin) / 2);
  padding-bottom: calc(var(--interface-default-margin) / 2);
  padding-left: calc(var(--interface-default-margin) * 2);
  opacity: 1;
  border-bottom: var(--interface-border);
  z-index: 15;
}

.message-name,
.message-menu {
  margin-bottom: calc(var(--interface-default-margin) / 2);
}
.message-name {
  font-family: nunito-bold;
}
.message-menu {
  background-color: transparent;
  width: var(--cell-size);
  height: var(--cell-size);
  margin-left: calc(var(--interface-default-margin) / 2);
  float: right;
  border-radius: var(--interface-border-radius);
}

.vote,
.gesture {
  height: var(--cell-size);
  margin-top: var(--interface-default-margin);
  border-radius: var(--interface-border-radius);
}

.vote {
  width: 30%;
  min-width: 70px;
}

.gesture {
  width: 20%;
  min-width: 35px;
}

.invert-button {
  background-color: white;
  color: black;
  border: none;
}

button {
  display: inline-block;
  font: 12px nunito, monospace;
  color: whitesmoke;
  text-align: center;
  line-height: 0;
  border: var(--interface-border);
  margin: 0;
  padding: 0;
  cursor: pointer;
  opacity: var(--overlay-opacity);
  overflow: hidden;
}

button:hover {
  opacity: 1;
}

button.delete {
  font: 14px nunito, monospace;
  margin-top: -3px;
  margin-right: -10px;
  padding-left: 5px;
}

button.icon {
  background-color: transparent;
  width: calc(var(--cell-size) * 1.5);
  height: calc(var(--cell-size) * 1.5);
  margin-top: calc(
    (var(--cell-size) * var(--input-height) - var(--cell-size) * 1.5) / 2
  );
  margin-left: var(--interface-default-margin);
  font: 25px nunito, monospace;
  border-radius: var(--input-border-radius);
}

.message {
  padding-top: var(--interface-default-margin);
  padding-bottom: var(--interface-default-margin);
  padding-left: calc(var(--interface-default-margin) * 2);
  padding-right: calc(var(--interface-default-margin) * 2);
}

.message:hover {
  background-color: var(--interface-highlight);
}

.message-name p,
.chat p,
.agenda p {
  display: inline-block;
  font: 16px nunito, monospace;
  color: whitesmoke;
  margin: 0;
  padding: 0;
  z-index: 15;
}

.message-name p {
  font-family: nunito-bold;
}

.miniAvatar {
  display: inline-block;
  width: 10px;
  height: 10px;
  padding: 0;
}

